<resources>
    <string name="app_name">LikeWise</string>
    <string name="welocme_to_the_chat_game">Welocme to the chat game!</string>
    <string name="you_and_your_patner_must_each_other_s_text">You and your patner \n must match each other\'s text</string>
    <string name="let_s_play">Let\'s Play</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="play_as_guest">Play as Guest</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="enter_your_email_to_receive_a_password_reset_link">Enter your email to receive a password reset link.</string>
    <string name="submit">Submit</string>
    <string name="what_languages_can_you_chat_in">What language(s) do you want to play in?</string>
    <string name="most_popular">Most Popular</string>
    <string name="others">Others</string>
    <string name="leadership">Leaderboard</string>
    <string name="get_more_points">Get More Coins</string>
    <string name="share_app">Share App</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="my_games">My Games</string>
    <string name="feel_empty_here">Feel empty here...  \n \n \n Time to start a game!</string>
    <string name="create_a_game">Create a Game</string>
    <string name="select_mode">Select mode</string>
    <string name="time">Rush<font size="10">\n(90 seconds)</font></string>
    <string name="lives">Relax<font size="10">\n(8 lives)</font></string>
    <string name="_90_secounds">(90 seconds)</string>
    <string name="_6_trials">(8 trials)</string>
    <string name="invite_patners">Invite partner</string>
    <string name="search_friends">Search friend</string>
    <string name="select_one_language">Select one language</string>
    <string name="what_is_the_objective">Goal</string>
    <string name="more_preciesly">Sub Goal</string>
    <string name="custom_instructions">Custom Instructions</string>
    <string name="optional">Optional</string>
    <string name="send_invite">Send Invite</string>
    <string name="what_do_we_see">What do we see?</string>
    <string name="add_images">Add Images</string>
    <string name="select_up_to_6_images">Select upto 6 images</string>
    <string name="take_picture">Take Picture</string>
    <string name="public_gallery">Public Gallery</string>
    <string name="from_gallery">Phone Gallery</string>
    <string name="invite_to_play">Invite to play</string>
    <string name="expertise">Expertise</string>
    <string name="accuracy">Accuracy</string>
    <string name="favorite_mode">Favorite Mode</string>
    <string name="games">Games</string>
    <string name="played">Played</string>
    <string name="created">Created</string>
    <string name="in_common">In Common</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="about_me">About Me</string>
    <string name="language_known">Known Languages</string>
    <string name="nationality">Nationality</string>
    <string name="residence">Residence</string>
    <string name="interests">Interests</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="public_games">(Random Games)</string>
    <string name="continue_with_facebook_to_play_with_friends">Continue with Facebook to play with friends</string>
    <string name="invitation_sent">Invitation sent</string>
    <string name="play_a_game">Play a Game</string>
    <string name="select_one_of_your_languages">Select one of your languages</string>
    <string name="match_for_this_game">Likewise % for this game</string>
    <string name="get_more_coins">Get more coins</string>
    <string name="start_for_this_game">Stats for this game</string>
    <string name="matched_entries">Total Entries</string>
    <string name="matched_words">Matched Words</string>
    <string name="streaks">Streaks</string>
    <string name="timing">Timing</string>
    <string name="unicity">Unicity</string>
    <string name="you_can_also_earn_3_coins_for_every_300_points_n_you_score_with_a_random_player">You can also earn 3 coins for every 300 points   you score with a random player</string>
    <string name="get_coins">Get Coins</string>
    <string name="setting">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="sounds">Sounds</string>
    <string name="vibration">Vibration</string>
    <string name="privacy_policies">Privacy Policies</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_ac">Do you really want to deactivate your account? You will not be invited to any game, and your current games will be removed.</string>
    <string name="searching_for_a_partner">Searching for a partner...</string>
    <string name="home">Home</string>
    <string name="please_login_first">Please Login first</string>
    <string name="continue_with_limited_features">Continue with limited features.</string>
    <string name="patners">Patners</string>
    <string name="please_tell_us_about_your_experience">Please tell us about your experience</string>
    <string name="good_and_bac_we_value_every_thing">Good and bad,we value every thing.</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="visit_us_at_likewise_chat">Visit us at <font color="#9A64BE"><u>LikeWise.chat</u></font>  </string>
    <string name="my_matches">My Matches</string>
    <string name="you_can_change_your_selection_later_in_your_profile">You can change your selection later in your profile.</string>
    <string name="with_a_random_partner">with a random partner</string>
    <string name="a_game_for_your_friends">a game for your friends</string>
    <string name="feels_empty_here">Feels empty here...</string>
    <string name="time_to_start_a_game">Time to start a game</string>
    <string name="coins_left">Coins left:</string>
    <string name="play_with_friends">Play with friends</string>
    <string name="upload_screen_shot">Upload screen shot</string>
    <string name="patner_found">Partner found</string>
    <string name="no_partner_found">No partner found...</string>
    <string name="game_over">GAME OVER</string>
    <string name="full_name_validation">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <!--    <string name="facebook_app_id">1062289284122476</string>-->
    <!--    <string name="fb_login_protocol_scheme">fb1062289284122476</string>-->
    <string name="no_internet">No Internet</string>
    <string name="facebook_app_id">682033362436149</string>
    <string name="fb_login_protocol_scheme">fb682033362436149</string>
    <string name="at_least_one_language">Please select atleast one langauge</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="add_interest">Add Interest</string>
    <string name="please_select_gender">Please Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enable_editing">Please Enable Editing Mode</string>
    <string name="please_tell_us_about_you">Please tell us about you</string>
    <string name="let_s_focus_on_long_sentences">Let\'s focus on long sentences</string>
    <string name="type_a_message">Make a Suggestion</string>
    <string name="are_you_sure">Are you sure !</string>
    <string name="want_to_remove">Really wants to remove ?</string>
    <string name="continue_with_facebook_n_to_create_games_and_play_with_friends">Continue with Social Platforms \n to create games and play with friends</string>
    <string name="streak">STREAK</string>
    <string name="app_id">ca-app-pub-1802088637385289~8549311072</string>
    <string name="search_theme">Search Theme</string>
    <string name="other">Other</string>
    <string name="default_notification_channel_id">1001</string>
    <string name="profile_lang">Profile and Languages</string>
</resources>
