<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activity.FeedbackActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivClose" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView117"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:textSize="17dp"
        android:fontFamily="@font/font"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:text="@string/please_tell_us_about_your_experience"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/drawable_white_corners2"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ivupload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView117"
        app:layout_constraintTop_toBottomOf="@+id/textView117">

        <EditText
            android:id="@+id/edfeedback"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/text_selector_feild"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:gravity="top|left"
            android:hint="@string/good_and_bac_we_value_every_thing"
            android:maxLength="1000"
            android:textSize="14dp"
            app:layout_constraintBottom_toTopOf="@+id/countText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/countText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginBottom="5dp"
            android:text="0/1000"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/ivupload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:layout_marginBottom="24dp"
        android:src="@drawable/attach"
        app:layout_constraintBottom_toTopOf="@+id/btnfeedback"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2" />


    <TextView
        android:id="@+id/tvfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="@font/font"
        android:text="@string/upload_screen_shot"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivupload"
        app:layout_constraintStart_toEndOf="@+id/ivupload"
        app:layout_constraintTop_toTopOf="@+id/ivupload" />

    <Button
        android:id="@+id/btnfeedback"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/drawable_yellow_corners"
        android:backgroundTint="@color/white"
        android:text="@string/send_feedback"
        android:textAllCaps="false"
        android:textColor="@color/lightPurple"
        app:layout_constraintBottom_toTopOf="@+id/tvChatURL"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2" />


    <TextView
        android:id="@+id/tvChatURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/visit_us_at_likewise_chat"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnfeedback"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/btnfeedback" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
