<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">


    <TextView
        android:id="@+id/textView65"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font"
        android:text="@string/nationality"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView66"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView66"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/residence"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/font"
        app:layout_constraintBottom_toBottomOf="@+id/textView65"
        app:layout_constraintEnd_toStartOf="@+id/textView67"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView65"
        app:layout_constraintTop_toTopOf="@+id/textView65" />

    <TextView
        android:id="@+id/textView67"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/interests"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/font"
        app:layout_constraintBottom_toBottomOf="@+id/textView66"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView66"
        app:layout_constraintTop_toTopOf="@+id/textView66" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView65"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/LLNationality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:background="@drawable/drawable_white_corners2"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivNationality"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/tvNationality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="Add Nationality"
                android:textAlignment="center"
                android:layout_marginBottom="16dp"
                android:textColor="@color/lightBlack"
                android:textSize="13dp" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/LLResidence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:background="@drawable/drawable_white_corners2"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/countryEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:hint="@string/country"
                android:maxLength="20"
                android:digits="@string/full_name_validation"
                android:focusable="false"
                android:background="@null"
                android:textColor="@color/lightBlack"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/stateEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:hint="@string/state"
                android:digits="@string/full_name_validation"
                android:maxLength="20"
                android:background="@null"
                android:focusable="false"
                android:textColor="@color/lightBlack"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/cityEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:hint="@string/city"
                android:digits="@string/full_name_validation"
                android:maxLength="25"
                android:background="@null"
                android:focusable="false"
                android:textColor="@color/lightBlack"
                android:textSize="13dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLInterest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:background="@drawable/drawable_white_corners2"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/edOneInterest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:hint="Add here..."
                android:focusable="false"
                android:maxLength="20"
                android:textSize="13dp"
                android:textColorHint="@color/text_selector"/>

            <EditText
                android:id="@+id/edTwoInterest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="Add here..."
                android:focusable="false"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:maxLength="20"
                android:textSize="13dp"
                android:textColorHint="@color/text_selector"/>

            <EditText
                android:id="@+id/edThreeInterest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@null"
                android:hint="Add here..."
                android:focusable="false"
                android:maxLength="20"
                android:textSize="13dp"
                android:textColorHint="@color/text_selector"/>


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>